<resources>
    <string name="app_name">wEconnect</string>
    <string name="White_background">White_background</string>
    <string name="username">Username</string>
    <string name="save_button">SAVE</string>
    <string name="upi_id">UPI ID</string>
    <string name="userAddress">Address</string>
    <string name="userCity">City</string>
    <string name="userState">State</string>
    <string name="userPinCode">Pincode</string>
    <string name="sellnowbg">sellnow_background</string>
    <string name="toys">toys</string>
    <string name="small_appliances">small_appliances</string>
    <string name="categories">categories</string>
    <string name="large_appliances">large_appliances</string>
    <string name="Categories">Categories</string>
    <string name="we_will_send_you_a_one_time_otp_on_this_given_mobile_number">We will send you a one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_91">+91</string>
    <string name="_8889996633">8889996633</string>
    <string name="get_otp">Get Otp</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="appz_name">Appz name</string>
    <string name="seller">Seller</string>
    <string name="buyer">BUYER</string>
    <string name="when_you_refuse_to_reuse_it_s_the_earth_you_abuse">WHEN YOU REFUSE TO REUSE IT\'S THE EARTH YOU ABUSE</string>
    <string name="bonjour_buyer">Bonjour Buyer</string>
    <string name="cart">Cart</string>
    <string name="please_select_your_field_of_interest">Please Select your Field of Interest</string>
</resources>