<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".entermobilenumberone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/weconnectlogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/colortextfirst"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/otp_verification" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"
            android:text="@string/we_will_send_you_a_one_time_otp_on_this_given_mobile_number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colortextsecond"
            android:text="@string/enter_mobile_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:background="@drawable/backgroundbox"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_91" />

            <EditText
                android:id="@+id/inputmobilenumber"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/_8889996633"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="245dp"
                android:layout_height="51dp"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:background="@drawable/pink_button"
                android:text="@string/get_otp"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>