<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back1"
    tools:context=".dashboard">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/weconnectlogo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_field_of_interest"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_light"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sellerbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/pink_button"
        android:text="@string/seller"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buyerbutton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/pink_button"
        android:text="@string/buyer"
        app:backgroundTint="@null"

        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>